created logo, added background

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
+  <link href='https://fonts.googleapis.com/css?family=Jacques+Francois+Shadow|Seaweed+Script' rel='stylesheet' type='text/css'>
 
   <!-- GOOGLE FONTS -->
 
@@ -26,7 +27,7 @@
         <div class="collapse navbar-collapse navbar-fixed-top" id="bs-example-navbar-collapse-1 menu-center">
           <ul class="nav navbar-nav navbar-left">
             <li class="navButton current"><a href="index.html">Home</a></li>
-            <li class="navButton"><a href="rooms.html">Our Rooms</a></li>
+            <li class="navButton"><a href="#">Our Rooms</a></li>
             <li class="navButton"><a href="#">Our Policy</a></li>
             <li class="navButton"><a href="#">About Us</a></li>
             <li class="navButton"><a href="#">Contact Us</a></li>
@@ -34,26 +35,38 @@
         </div>
       </div>
     </nav>
-    <h1 class="logo">LOGO</h1>
-    <div class="container">
+    <div class="logo">
+      <h1 class="title">White House Inn</h1>
+      <h2 class="subtitle">on the Waterfront</h1>
+    </div>
+    <div class="container content">
       <div class="row">
         <div class="col-sm-4">
           <div class="snippet">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum nam numquam consequuntur voluptate est, facere assumenda error officiis. Est aliquid quod, reprehenderit sunt qui. Quod voluptate ratione dignissimos nostrum aspernatur.
+            <h3>Our Rooms</h3>
+            <img src="img/hotel-room.jpg" alt="#">
+            <p>The rooms at the White House Inn will surround you with warmth, relaxation and beauty. Search our rooms and we know you will find the right one for you!</p>
+            <a href="#" class="button">Read More</a>
           </div>
         </div>
         <div class="col-sm-4">
           <div class="snippet">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus consequuntur nesciunt illum error possimus inventore culpa. Rerum at quaerat praesentium consequatur odit accusamus aliquam, nobis deserunt, aperiam cumque. Eveniet, ex.
+            <h3>Book a Room</h3>
+            <img src="img/hotel-booking.jpg" alt="#">
+            <p>Check to see if your chosen room is available. Book a room today!</p>
+            <a href="#" class="button">Book Now</a>
           </div>
         </div>
         <div class="col-sm-4">
           <div class="snippet">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla doloremque ipsum sint optio. Reprehenderit quae enim dolorum, cupiditate commodi quaerat corporis sapiente perspiciatis expedita. Qui rerum quia dolore dolores magni.
+            <h3>Activities Around Homer</h3>
+            <img src="img/bald-eagle.jpg" alt="#">
+            <p>We are conveniently located in the heart of Homer. Read more to find the activities you can enjoy in the local area.</p>
+            <a href="#" class="button">Read More</a>
           </div>
         </div>
       </div>
-    </div>
+    </div> <!--END CONTENT-->
   </div>
 
   <!-- JAVASCRIPT BELOW -->
