worked on snippets

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
-  <link href='https://fonts.googleapis.com/css?family=Jacques+Francois+Shadow|Seaweed+Script' rel='stylesheet' type='text/css'>
 
   <!-- GOOGLE FONTS -->
+  <link href='https://fonts.googleapis.com/css?family=Jacques+Francois+Shadow|Seaweed+Script' rel='stylesheet' type='text/css'> <!--LOGO-->
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Kaushan+Script' rel='stylesheet' type='text/css'> <!--CONTENT-->
 
 </head>
 <body>
@@ -41,25 +42,25 @@
     </div>
     <div class="container content">
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-4 content">
           <div class="snippet">
-            <h3>Our Rooms</h3>
+            <p class="header">Our Rooms</p>
             <img src="img/hotel-room.jpg" alt="#">
             <p>The rooms at the White House Inn will surround you with warmth, relaxation and beauty. Search our rooms and we know you will find the right one for you!</p>
             <a href="#" class="button">Read More</a>
           </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 content">
           <div class="snippet">
-            <h3>Book a Room</h3>
+            <p class="header">Book a Room</p>
             <img src="img/hotel-booking.jpg" alt="#">
             <p>Check to see if your chosen room is available. Book a room today!</p>
             <a href="#" class="button">Book Now</a>
           </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 content">
           <div class="snippet">
-            <h3>Activities Around Homer</h3>
+            <p class="header">Activities Around Homer</p>
             <img src="img/bald-eagle.jpg" alt="#">
             <p>We are conveniently located in the heart of Homer. Read more to find the activities you can enjoy in the local area.</p>
             <a href="#" class="button">Read More</a>
